Opção de editar e finalizar tarefa

--- a/app/src/main/res/layout/lista_tarefas.xml
+++ b/app/src/main/res/layout/lista_tarefas.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Tarefa"
+        android:textColor="#000"
+        android:textStyle="bold"
         android:textSize="18sp"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="1dp" />
@@ -22,6 +24,8 @@
         android:layout_below="@+id/txvTarefa"
         android:layout_marginTop="0dp"
         android:text="SEX - 29/05/2020"
+        android:textColor="#000"
+        android:textStyle="bold"
         android:textSize="14sp"
         tools:layout_editor_absoluteX="27dp"
         tools:layout_editor_absoluteY="1dp" />
